# Computergraphics

./: .gitignore  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
uebung1/: CMakeLists.txt  MC01.txt  functions01.h  main.cpp
uebung2/: CMakeLists.txt  functions02.h  main.cpp
uebung2/Uebung2/: Uebung2.sln
uebung2/Uebung2/Uebung2/: Uebung2.vcxproj  Uebung2.vcxproj.filters  main.cpp
uebung3/: CMakeLists.txt  fragment_shader.fs  functions03.h  main.cpp
